Initial passing tests of full RollController post-refactor
