# Dnd.API/DTOs/DiceSimulationResponseDto.cs
@@ -1,0 +1,5 @@
+﻿namespace Dnd.API.DTOs;
+
+public class DiceSimulationResponseDto
+{
+}
